log
Thu, May  1, 2025  4:17:15 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Fri, May  2, 2025  1:08:51 AM: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
8fabe4f
Fri, May  2, 2025  1:23:31 AM: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:63:16: error: variable 'parent' set but not used [-Werror=unused-but-set-variable]
     TreeNode * parent = NULL;
                ^~~~~~
cc1.exe: all warnings being treated as errors
f8eaa76
Fri, May  2, 2025  1:23:50 AM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:63:16: error: variable 'parent' set but not used [-Werror=unused-but-set-variable]
     TreeNode * parent = NULL;
                ^~~~~~
cc1.exe: all warnings being treated as errors
4b4e5ff
Fri, May  2, 2025  1:23:57 AM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:63:16: error: variable 'parent' set but not used [-Werror=unused-but-set-variable]
     TreeNode * parent = NULL;
                ^~~~~~
cc1.exe: all warnings being treated as errors
1a7ff4a
Fri, May  2, 2025  1:26:32 AM: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|7
total_score: 5/70
de1c739
Fri, May  2, 2025  1:28:04 AM: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  6|6
total_score: 15/70
9388737
Fri, May  2, 2025  1:28:50 AM: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  5|7
total_score: 5/70
42d708d
